--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -8,3 +8,33 @@
     --sep:#0e0d0d;
     --font: 'Poppins', Arial,Helvetica;
 }
+.contactPage{
+    display: block;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(../images/kapil\ 2.webp);
+    background-size: cover;
+    background-position: top;
+    height:1000px;
+    /* height: au;
+    width: 100%; */
+}
+.phoneEmail{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    color: var(--white);
+}
+.phoneEmail a{
+    text-decoration: none;
+    color: var(--white);
+}
+.phoneEmail img{
+    height: 20px;
+}
+#subHeadingContact{
+    text-align: center;
+    font-size: 3rem;
+    padding: 2rem 0;
+    color: var(--white);
+    font-weight: 550;
+}
